# simplify-app

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  start.bat  start.sh
src/: __init__.py  chunker.py  config.py  llm_client.py  main.py  models.py  task_manager.py
src/templates/: index.html
